Change RTSExperiment log signature