@@ -4,7 +4,26 @@ version '1.0-SNAPSHOT'
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
-if ( project.hasProperty("mainClass") ) {
+applicationDefaultJvmArgs = ["-Xloggc:/Users/bencecserna/Documents/Development/projects/real-time-search/gc.log",
+                             "-XX:+PrintGC",
+                             "-server", "-XX:+AggressiveOpts",
+//                             "-XX:+UseConcMarkSweepGC",
+                             "-XX:+UseG1GC",
+//                             "-XX:+UnlockDiagnosticVMOptions", "-XX:+G1PrintRegionLivenessInfo",
+//                             "-XX:MaxGCPauseMillis=80",
+//                             "-XX:MaxGCMinorPauseMillis=50",
+//                             "-XX:GCPauseIntervalMillis=300",
+                             "-XX:NewSize=50m", "-XX:MaxNewSize=50m",
+//                             "-XX:SurvivorRatio=1",
+//                             "-XX:+DoEscapeAnalysis",
+                             "-Xms6g",
+                             "-Xmx6g"
+]
+
+//-server -Xms512m -Xmx3076m -XX:NewRatio=50 -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:+AggressiveOpts -XX:+DoEscapeAnalysis -XX:+UseCompressedOops -XX:MaxGCPauseMillis=400 -XX:GCPauseIntervalMillis=8000 -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime
+
+
+if (project.hasProperty("mainClass")) {
     mainClassName = mainClass
 } else {
     mainClassName = "edu.unh.cs.ai.realtimesearch.RealTimeSearchKt"
@@ -41,12 +60,12 @@ dependencies {
 }
 
 sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
-    test.java.srcDirs += 'src/test/kotlin'
+    main.java.srcDirs += 'src/ main / kotlin '
+                             test.java.srcDirs += 'src/test/kotlin'
 }
 
 run {
-    if ( project.hasProperty("appArgs") ) {
+    if (project.hasProperty("appArgs")) {
         args = Eval.me(appArgs)
     }
 }
